--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,11 @@ android {
     namespace 'com.example.pizzaapp'
     compileSdk 33
 
+    buildFeatures {
+        viewBinding = true
+        dataBinding true
+    }
+
     defaultConfig {
         applicationId "com.example.pizzaapp"
         minSdk 24
@@ -41,4 +46,5 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
 }
